--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,7 @@
     dest: "{{ coolify_app_volume }}"
     version: "{{ coolify_version | d('main') }}"
     force: "{{ coolify_force_update | d(False) }}"
+  ignore_errors: "{{ (coolify_force_update | d(False)) == False }}"
 
 - name: "Create install folders"
   ansible.builtin.file:
@@ -24,9 +25,9 @@
     mode: 0640
   loop:
     - { src: .env.j2, dest: "{{ coolify_data_volume }}/.env" }
-    - { src: coolify.service.j2, dest: "/etc/systemd/system/coolify.service" }
     - { src: install.sh.j2, dest: "{{ coolify_data_volume }}/install.sh" }
     - { src: Dockerfile.j2, dest: "{{ coolify_data_volume }}/Dockerfile" }
+    - { src: docker-compose.yml.j2, dest: "{{ coolify_data_volume }}/docker-compose.yml" }
 
 - name: "Rights exe"
   ansible.builtin.file:
@@ -42,12 +43,3 @@
   ansible.builtin.command:
     chdir: "{{ coolify_data_volume }}"
     cmd: "./install.sh {{ coolify_install_mode }}"
-  notify:
-    - reload systemd
-    - restart coolify
-
-- name: Enable coolify
-  ansible.builtin.systemd:
-    name: coolify
-    enabled: True
-  become: True
