--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,42 @@
 ---
+# Base
+coolify_domain: "coolify.{{ hostvars[inventory_hostname].ansible_host }}"
+coolify_user: root
+
+# Gh app creation
+# !!!! Need github token !!!!
+github_api: https://api.github.com
+github_site: https://github.com
+# Not working yet, so it's disabled
+coolify_github_app_create_server: False
+coolify_github_api_token: ~
+coolify_github_app_url: "{{ coolify_domain }}"
+coolify_github_app_name: "coolify-{{ coolify_user }}"
+
+coolify_github_app_manifest:
+  name: "{{ coolify_github_app_name }}"
+  url: "{{ coolify_github_app_url }}"
+  hook_attributes:
+    url: "{{ coolify_github_app_url }}/api/v1/webhooks/deploy"
+  redirect_url: "{{ coolify_github_app_url }}/redirect"
+  callback_urls: ["{{ coolify_github_app_url }}/api/v1/login/github/app"]
+  public: True
+  default_permissions:
+    actions: write
+    checks: write
+    contents: write
+    deployments: write
+    discussions: write
+    environments: write
+    metadata: read
+    pull_request: write
+    webhooks: write
+    commit_statuses: write
+    email_addresses: read
+  default_events:
+    - push
+    - pull_request
+
 # Git
 coolify_git_provider: github.com
 coolify_git_org: coollabsio
@@ -8,8 +46,6 @@ coolify_version: main
 coolify_force_update: False
 
 # Docker container and sys
-coolify_user: root
-coolify_container_name: coolify-single
 coolify_app_dir: "{{ '/root' if coolify_user == 'root' else '/home/%s' % coolify_user }}"
 coolify_app_volume: "{{ '%s/coolify-repo' % coolify_app_dir }}"
 coolify_data_volume: /data/coolify
@@ -19,6 +55,7 @@ coolify_swarm_addr: "{{ ansible_default_ipv4.interface }}"
 # "all"
 # "coolify"
 # "proxy"
+# "mongodb"
 # "upgrade-phase-1"
 # "upgrade-phase-2"
 coolify_install_mode: all
@@ -26,9 +63,9 @@ coolify_install_mode: all
 coolify_env_default:
   # Domain where your Coolify instance will be available and reachable.
   # It's the same as you set in Github OAuth App and Github App as <domain>.
-  DOMAIN: "{{ hostvars[inventory_hostname].ansible_host }}"
+  DOMAIN: "{{ coolify_domain }}"
   ## Let's Encrypt contact email required
-  EMAIL: test@localhost
+  EMAIL: "coolify@{{ coolify_domain }}"
 
   DOCKER_NETWORK: coolabs
 
@@ -54,5 +91,8 @@ coolify_env_default:
 
   # It should look like this. Newlines breaks with \n
   GITHUB_APP_PRIVATE_KEY: ''
+
+# define values here
+coolify_env: {}
 
 _coolify_env: "{{ coolify_env_default | combine(coolify_env) }}"
